--- a/trash_collector/customers/templates/customers/base.html
+++ b/trash_collector/customers/templates/customers/base.html
@@ -17,13 +17,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Home</a>
+          <a class="nav-link active" href="#">Account Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" aria-current="page" tabindex="-1">List of Heroes</a>
+          <a class="nav-link" href="#" aria-current="page" tabindex="-1">Change Pickup Day</a>
         </li>
           <li class="nav-item">
-          <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Register a new hero</a>
+          <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Suspend Service</a>
+        </li>
+          <li class="nav-item">
+          <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Account Balance</a>
         </li>
       </ul>
     </div>
