--- a/trash_collector/customers/templates/customers/index.html
+++ b/trash_collector/customers/templates/customers/index.html
@@ -3,6 +3,18 @@
 
 {% block title %} Customer Home {% endblock %}
 
+{% block navbar %}
+<li class="nav-item">
+  <a class="nav-link" href="#">Service Day</a>
+</li>
+<li class="nav-item">
+  <a class="nav-link" href="#">Schedule Suspension</a>
+</li>
+<li class="nav-item">
+  <a class="nav-link" href="#">Account Info</a>
+</li>
+{% endblock %}
+
 {% block header %} Customer Home {% endblock %}
 
 {% block content %}
