--- a/trash_collector/employees/templates/employees/index.html
+++ b/trash_collector/employees/templates/employees/index.html
@@ -1,7 +1,17 @@
 {% extends 'base.html' %}
 
 {% block title %}{% block header %} Employee Home {% endblock %}{% endblock %}
-
+{% block navbar %}
+<li class="nav-item">
+  <a class="nav-link" href="#">Today's Schedule</a>
+</li>
+<li class="nav-item">
+  <a class="nav-link" href="#">Future Routes</a>
+</li>
+<li class="nav-item">
+  <a class="nav-link" href="#">Assigned Customers</a>
+</li>
+{% endblock %}
 {% block content %}
   {% if user.is_authenticated %}
     Hello Employee {{ user.username }}!
