--- a/trash_collector/templates/base.html
+++ b/trash_collector/templates/base.html
@@ -17,14 +17,8 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#" aria-current="page" tabindex="-1">List of Heroes</a>
-        </li>
-          <li class="nav-item">
-          <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Register a new hero</a>
-        </li>
+          <a class="nav-link" href="#">Home</a>
+        </li>{% block navbar %}{% endblock %}
       </ul>
     </div>
   </div>
