--- a/trash_collector/customers/templates/customers/index.html
+++ b/trash_collector/customers/templates/customers/index.html
@@ -18,7 +18,10 @@
 {% block header %} Customer Home {% endblock %}
 
 {% block content %}
-  {% if user.is_authenticated %}
+  {% if customer != True and user.is_authenticated %}
+    Hey we see you aren't registered yet. Click below for onboarding!
+    <a href="{% url 'customers:onboard' %}">Onboard</a>
+  {% elif user.is_authenticated %}
     Hello Customer {{ user.username }}!
   {% else %}
     <p>You are at the customer index, but you are not logged in.</p>
