created new templates for customers

--- a/trash_collector/customers/templates/customers/suspend.html
+++ b/trash_collector/customers/templates/customers/suspend.html
@@ -8,7 +8,7 @@
   <a class="nav-link" href="{% url 'customers:pickup_day' %}">Service Day</a>
 </li>
 <li class="nav-item">
-  <a class="nav-link" href="{% url 'customers:suspend' %}}">Schedule Suspension</a>
+  <a class="nav-link active" href="{% url 'customers:suspend' %}}">Schedule Suspension</a>
 </li>
 <li class="nav-item">
   <a class="nav-link" href="{% url 'customers:account_info' %}">Account Info</a>
