--- a/trash_collector/customers/templates/customers/account_info.html
+++ b/trash_collector/customers/templates/customers/account_info.html
@@ -11,7 +11,7 @@
   <a class="nav-link" href="{% url 'customers:suspend' %}}">Schedule Suspension</a>
 </li>
 <li class="nav-item">
-  <a class="nav-link" href="{% url 'customers:account_info' %}">Account Info</a>
+  <a class="nav-link active" href="{% url 'customers:account_info' %}">Account Info</a>
 </li>
 {% endblock %}
 
