--- a/trash_collector/customers/templates/customers/pickup_day.html
+++ b/trash_collector/customers/templates/customers/pickup_day.html
@@ -5,7 +5,7 @@
 
 {% block navbar %}
 <li class="nav-item">
-  <a class="nav-link" href="{% url 'customers:pickup_day' %}">Service Day</a>
+  <a class="nav-link active" href="{% url 'customers:pickup_day' %}">Service Day</a>
 </li>
 <li class="nav-item">
   <a class="nav-link" href="{% url 'customers:suspend' %}}">Schedule Suspension</a>
