--- a/trash_collector/customers/templates/customers/account_info.html
+++ b/trash_collector/customers/templates/customers/account_info.html
@@ -25,10 +25,10 @@
     <h1 align="center">Hello {{ user.username }}!</h1><br>
     <table align="center" width="80%">
         <tr>
-            <td><h3 align="center">Please fill out the following information so we can start your trash collection service</h3></td>
-            <td><form action="{% url 'customers:onboard' %}" method="post">
+            <td><h3 align="center">Account Details</h3></td>
+            <td><form action="{% url 'customers:account_info' %}" method="post">
         {% csrf_token %}
-    Name:<input type="text" name="name" id="name" class="btn btn-dark" value="{{ user.name }}" ><br>
+    Name:<input type="text" name="name" id="name" class="btn btn-dark" value="{{ customer.name }}" ><br>
     <div>Pickup Day: <select name="day" id="day" type="text" class="btn btn-dark">Pickup Day:
         <option value="Monday">Monday</option>
         <option value="Tuesday">Tuesday</option>
@@ -37,8 +37,8 @@
         <option value="Friday">Friday</option>
     </select>
         </div>
-    Address:<input type="text" name="address" id="address" class="btn btn-dark" value="{{ user.address }}" ><br>
-    Zipcode:<input type="text" name="zip" id="zip" class="btn btn-dark" value="{{ user.zipcode }}" ><br>
+    Address:<input type="text" name="address" id="address" class="btn btn-dark" value="{{ customer.address }}" ><br>
+    Zipcode:<input type="text" name="zip" id="zip" class="btn btn-dark" value="{{ customer.zipcode }}" ><br>
     <input type="submit" value="Update Account Info" class="btn btn-dark">
     </form></td>
         </tr>
