--- a/trash_collector/templates/base.html
+++ b/trash_collector/templates/base.html
@@ -18,7 +18,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="{% url 'home' %}">Home</a>
         </li>{% block navbar %}{% endblock %}
       </ul>
     </div>
