--- a/trash_collector/customers/templates/customers/suspend.html
+++ b/trash_collector/customers/templates/customers/suspend.html
@@ -15,7 +15,7 @@
 </li>
 {% endblock %}
 
-{% block header %} Customer Home {% endblock %}
+{% block header %} Account Suspension {% endblock %}
 
 {% block content %}
   {% if customer_exists != True and user.is_authenticated %}
