--- a/trash_collector/customers/templates/customers/account_info.html
+++ b/trash_collector/customers/templates/customers/account_info.html
@@ -43,6 +43,10 @@
     <input type="submit" value="Update Account Info" class="btn btn-dark">
     </form></td>
         </tr>
+        <tr>
+            <td colspan="2"> <h3 align="center">You currently owe {{customer.account_balance}} in service fees<br>
+            <a href="#" class="btn btn-dark">click here to pay</a></h3></td>
+        </tr>
     </table>
   {% else %}
     <p>You are at the customer index, but you are not logged in.</p>
