--- a/trash_collector/employees/templates/employees/index.html
+++ b/trash_collector/employees/templates/employees/index.html
@@ -13,7 +13,10 @@
 </li>
 {% endblock %}
 {% block content %}
-  {% if user.is_authenticated %}
+  {% if user.is_authenticated and employee_exists != True  %}
+    Click below for employee orientation!
+    <a href="{% url 'employees:onboard' %}">Onboard</a>
+  {% elif user.is_authenticated %}
     Hello Employee {{ user.username }}!
   {% else %}
     <p>You are at the employee index, but you are not logged in.</p>
