--- a/trash_collector/employees/templates/employees/onboard.html
+++ b/trash_collector/employees/templates/employees/onboard.html
@@ -8,7 +8,7 @@
   <a class="nav-link" href="#">Today's Schedule</a>
 </li>
 <li class="nav-item">
-  <a class="nav-link" href="#">Future Routes</a>
+  <a class="nav-link" href="{% url 'employees:scheduler' %}">Future Routes</a>
 </li>
 <li class="nav-item">
   <a class="nav-link" href="#">Assigned Customers</a>
