--- a/trash_collector/employees/templates/employees/onboard.html
+++ b/trash_collector/employees/templates/employees/onboard.html
@@ -5,7 +5,7 @@
 
 {% block navbar %}
 <li class="nav-item">
-  <a class="nav-link" href="#">Today's Schedule</a>
+  <a class="nav-link" href="{% url 'employees:today' %}">Today's Schedule</a>
 </li>
 <li class="nav-item">
   <a class="nav-link" href="#">Future Routes</a>
