--- a/trash_collector/employees/templates/employees/today.html
+++ b/trash_collector/employees/templates/employees/today.html
@@ -3,7 +3,7 @@
 {% block title %}{% block header %} Employee Home {% endblock %}{% endblock %}
 {% block navbar %}
 <li class="nav-item">
-  <a class="nav-link" href="{% url 'employees:today' %}">Today's Schedule</a>
+  <a class="nav-link active" href="{% url 'employees:today' %}">Today's Schedule</a>
 </li>
 <li class="nav-item">
   <a class="nav-link" href="#">Future Routes</a>
