minor change to gitignore

--- a/trash_collector/employees/templates/employees/today.html
+++ b/trash_collector/employees/templates/employees/today.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{% block header %} Employee Home {% endblock %}{% endblock %}
+{% block title %}{% block header %} Today's Schedule {% endblock %}{% endblock %}
 {% block navbar %}
 <li class="nav-item">
   <a class="nav-link active" href="{% url 'employees:today' %}">Today's Schedule</a>
