--- a/trash_collector/employees/templates/employees/scheduler.html
+++ b/trash_collector/employees/templates/employees/scheduler.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}{% block header %} Employee Home {% endblock %}{% endblock %}
+{% block title %}{% block header %} Another Day's Schedule {% endblock %}{% endblock %}
 {% block navbar %}
 <li class="nav-item">
   <a class="nav-link" href="{% url 'employees:today' %}">Today's Schedule</a>
@@ -24,7 +24,7 @@
     {% csrf_token %}
   <input type="date" name="date" id="date"><br>
   <input type="submit" value="View schedule" class="btn btn-dark">
-  </form></td>
+        </form></td></tr>
 {% for customer in customers %}
   <li>
     <ul>
