--- a/trash_collector/employees/templates/employees/today.html
+++ b/trash_collector/employees/templates/employees/today.html
@@ -52,7 +52,7 @@
 
     <!-- Async script executes immediately and must be after any DOM elements used in callback. -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkuAhUeBFa0GtaW7whg-gZt0qVodwvEEE&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?key={{key}}&callback=initMap"
       async
     ></script>
 
