--- a/trash_collector/employees/templates/employees/scheduler.html
+++ b/trash_collector/employees/templates/employees/scheduler.html
@@ -6,10 +6,10 @@
   <a class="nav-link" href="{% url 'employees:today' %}">Today's Schedule</a>
 </li>
 <li class="nav-item">
-  <a class="nav-link" href="#">Future Routes</a>
+  <a class="nav-link" href="{% url 'employees:scheduler' %}">Future Routes</a>
 </li>
 <li class="nav-item">
-  <a class="nav-link" href="#">Assigned Customers</a>
+  <a class="nav-link" href="{% url 'employees:area' %}">Assigned Customers</a>
 </li>
 {% endblock %}
 {% block content %}
