changed text on customer page

--- a/trash_collector/employees/templates/employees/customer.html
+++ b/trash_collector/employees/templates/employees/customer.html
@@ -26,7 +26,7 @@
     <a href="{% url 'employees:onboard' %}">Onboard</a>
   {% elif user.is_authenticated %}
 <h3>Hello Employee {{ user.username }}!</h3><br>
-<h4>Your schedule for today is:</h4>
+<h4>Details for Customer:</h4>
 <ul>
   <li>
     <ul>
