added a lot of tweaks to html pages for both customers and employees. starting to gain consistency from page to page.

--- a/trash_collector/customers/templates/customers/account_info.html
+++ b/trash_collector/customers/templates/customers/account_info.html
@@ -20,8 +20,10 @@
 {% block content %}
   {% if customer_exists != True and user.is_authenticated %}
     Hey we see you aren't registered yet. Click below for onboarding!
-    <a href="{% url 'customers:onboard' %}">Onboard</a>
-  {% elif user.is_authenticated %}
+    <form action="{% url 'customers:onboard' %}">
+        {% csrf_token %}
+        <input type="submit" value="Onboard" class="btn btn-dark">
+    </form>  {% elif user.is_authenticated %}
     <h1 align="center">Hello {{ user.username }}!</h1><br>
     <table align="center" width="80%">
         <tr>
