--- a/trash_collector/customers/templates/customers/suspend.html
+++ b/trash_collector/customers/templates/customers/suspend.html
@@ -15,13 +15,15 @@
 </li>
 {% endblock %}
 
-{% block header %}{% endblock %}
+{% block header %}Schedule Suspension{% endblock %}
 
 {% block content %}
   {% if customer_exists != True and user.is_authenticated %}
     Hey we see you aren't registered yet. Click below for onboarding!
-    <a href="{% url 'customers:onboard' %}">Onboard</a>
-  {% elif user.is_authenticated %}
+    <form action="{% url 'customers:onboard' %}">
+        {% csrf_token %}
+        <input type="submit" value="Onboard" class="btn btn-dark">
+    </form>  {% elif user.is_authenticated %}
   <h1 align="center">Hello {{ user.username }}!</h1><br>
     <table align="center" width="80%">
         <tr>
