--- a/trash_collector/employees/templates/employees/scheduler.html
+++ b/trash_collector/employees/templates/employees/scheduler.html
@@ -19,7 +19,7 @@
   {% elif user.is_authenticated %}
 <h3>Hello Employee {{ user.username }}!</h3><br>
      <tr>
-        <td><h3 align="center">What day would you like to see?</h3></td>
+        <td><h3>What day would you like to see?</h3></td>
         <td><form action="{% url 'employees:scheduler' %}" method="post">
     {% csrf_token %}
   <input type="date" name="date" id="date"><br>
