modified customer suspend page, added check for if they are already suspended, now they will get redirected to a resume page.

--- a/trash_collector/customers/templates/customers/pickup_day.html
+++ b/trash_collector/customers/templates/customers/pickup_day.html
@@ -15,7 +15,7 @@
 </li>
 {% endblock %}
 
-{% block header %} Pickup Day {% endblock %}
+{% block header %} Service Day {% endblock %}
 
 {% block content %}
   {% if customer_exists != True and user.is_authenticated %}
