--- a/trash_collector/customers/templates/customers/checkout.html
+++ b/trash_collector/customers/templates/customers/checkout.html
@@ -27,7 +27,7 @@
 <script type="text/javascript">
     const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value;
     // Create an instance of the Stripe object with your publishable API key
-    var stripe = Stripe("pk_test_51Iq1pdBzs8378IVoHzXAk7yqOULMvLiO84TtPFQ2dpUYl79IVauASBcL5YrUS4Vswrf8ni9CKrI05bG9oPct812q00ymattIoH");
+    var stripe = Stripe("{{key}}");
     var checkoutButton = document.getElementById("checkout-button");
 
     checkoutButton.addEventListener("click", function () {
