--- a/trash_collector/employees/templates/employees/customer.html
+++ b/trash_collector/employees/templates/employees/customer.html
@@ -21,8 +21,8 @@
 {% endblock %}
 {% block content %}
   {% if user.is_authenticated and employee_exists != True  %}
-    Click below for employee orientation!
-    <a href="{% url 'employees:onboard' %}">Onboard</a>
+    Click below for employee orientation!<br>
+    <a href="{% url 'employees:onboard' %}" class="btn btn-dark">Onboard</a>
   {% elif user.is_authenticated %}
 <h3>Hello Employee {{ user.username }}!</h3><br>
 <h4>Details for Customer:</h4>
