--- a/trash_collector/employees/templates/employees/index.html
+++ b/trash_collector/employees/templates/employees/index.html
@@ -14,8 +14,8 @@
 {% endblock %}
 {% block content %}
   {% if user.is_authenticated and employee_exists != True  %}
-    Click below for employee orientation!
-    <a href="{% url 'employees:onboard' %}">Onboard</a>
+    Click below for employee orientation!<br>
+    <a href="{% url 'employees:onboard' %}" class="btn btn-dark">Onboard</a>
   {% elif user.is_authenticated %}
     Hello Employee {{ user.username }}!
   {% else %}
