--- a/trash_collector/employees/templates/employees/scheduler.html
+++ b/trash_collector/employees/templates/employees/scheduler.html
@@ -6,7 +6,7 @@
   <a class="nav-link" href="{% url 'employees:today' %}">Today's Schedule</a>
 </li>
 <li class="nav-item">
-  <a class="nav-link" href="{% url 'employees:scheduler' %}">Future Routes</a>
+  <a class="nav-link active" href="{% url 'employees:scheduler' %}">Future Routes</a>
 </li>
 <li class="nav-item">
   <a class="nav-link" href="{% url 'employees:area' %}">Assigned Customers</a>
@@ -14,8 +14,8 @@
 {% endblock %}
 {% block content %}
   {% if user.is_authenticated and employee_exists != True  %}
-    Click below for employee orientation!
-    <a href="{% url 'employees:onboard' %}">Onboard</a>
+    Click below for employee orientation!<br>
+    <a href="{% url 'employees:onboard' %}" class="btn btn-dark">Onboard</a>
   {% elif user.is_authenticated %}
 <h3>Hello Employee {{ user.username }}!</h3><br>
      <tr>
